--- a/app.yaml
+++ b/app.yaml
@@ -1,3 +1,8 @@
-runtime: nodejs10
+env: standard
+runtime: nodejs12
+service: default
 
-instance_class: F2
+handlers:
+  - url: /.*
+    secure: always
+    script: auto
