--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "main": "index.js",
   "scripts": {
     "dev": "next",
-    "build": "rm -rf ./build && NODE_ENV=production next build",
-    "start": "next start -p 8080",
-    "deploy": "npm run build && gcloud app deploy"
+    "build": "next build",
+    "start": "next start",
+    "deploy": "next deploy"
   },
   "keywords": [],
   "author": "",
