--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   "dependencies": {
     "next": "^10.0.5",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-calendar": "^3.3.0",
+    "react-dom": "^17.0.1",
+    "react-hook-form": "^6.14.1"
   }
 }
